<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Schedule Notifier</string>

    <string name="minutes_until">minutes until</string>
    <string name="no_events">no scheduled events</string>
    <string name="edit_schedule">Edit schedule</string>
    <string name="notifications_show">Show notifications</string>

    <string name="monday_short">M</string>
    <string name="tuesday_short">T</string>
    <string name="wednesday_short">W</string>
    <string name="thursday_short">T</string>
    <string name="friday_short">F</string>
    <string name="saturday_short">S</string>
    <string name="sunday_short">S</string>
    
    <string name="schedule">Event Schedule</string>
    <string name="new_event">New event</string>
    <string name="no_events_list">No events</string>
    <string name="no_title">no title</string>

    <string name="edit_event">Edit Event</string>
    <string name="enter_title">Enter a title for the event</string>
    <string name="title">Title</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="repeat">Repeat</string>
    <string name="delete_event">Delete event</string>
    <string name="confirmation">Are you sure?</string>
    <string name="set_time">Set the time</string>
</resources>
