<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/weekday_display"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView style="@style/WeekdayTextView"
        android:text="@string/monday_short"/>

    <TextView style="@style/WeekdayTextView"
        android:text="@string/tuesday_short"/>

    <TextView style="@style/WeekdayTextView"
        android:text="@string/wednesday_short"/>

    <TextView style="@style/WeekdayTextView"
        android:text="@string/thursday_short"/>

    <TextView style="@style/WeekdayTextView"
        android:text="@string/friday_short"/>

    <TextView style="@style/WeekdayTextView"
        android:text="@string/saturday_short"/>

    <TextView style="@style/WeekdayTextView"
        android:text="@string/sunday_short"/>
</LinearLayout>