<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/weekday_selector"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ToggleButton style="@style/WeekdayButton"
        android:textOff="@string/monday_short"
        android:textOn="@string/monday_short"/>

    <ToggleButton style="@style/WeekdayButton"
        android:textOff="@string/tuesday_short"
        android:textOn="@string/tuesday_short"/>

    <ToggleButton style="@style/WeekdayButton"
        android:textOff="@string/wednesday_short"
        android:textOn="@string/wednesday_short"/>

    <ToggleButton style="@style/WeekdayButton"
        android:textOff="@string/thursday_short"
        android:textOn="@string/thursday_short"/>

    <ToggleButton style="@style/WeekdayButton"
        android:textOff="@string/friday_short"
        android:textOn="@string/friday_short"/>

    <ToggleButton style="@style/WeekdayButton"
        android:textOff="@string/saturday_short"
        android:textOn="@string/saturday_short"/>

    <ToggleButton style="@style/WeekdayButton"
        android:textOff="@string/sunday_short"
        android:textOn="@string/sunday_short"
        android:textColor="@color/red800"/>
</LinearLayout>